[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/enemies/frog/frog.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Frog/Frog.gd" type="Script" id=2]
[ext_resource path="res://assets/Music/effects/hit.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 12.4689

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 13.9385, 5.06083 )

[sub_resource type="DynamicFont" id=9]
size = 7
outline_size = 1
outline_color = Color( 0.364706, 1, 0, 1 )
font_data = ExtResource( 4 )

[node name="Frog" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.330547, -0.220366 )
frames = SubResource( 6 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.338373, 1.71601 )
shape = SubResource( 7 )

[node name="PlayerDetector" type="Area2D" parent="." groups=[
"Enemy",
]]
modulate = Color( 0.00392157, 0.0862745, 0.980392, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -0.0145912, -16.6158 )
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
autostart = true

[node name="music_effect" type="Node2D" parent="."]

[node name="Die" type="AudioStreamPlayer" parent="music_effect"]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="name" type="Label" parent="."]
margin_left = -14.2878
margin_top = -20.1464
margin_right = 13.7122
margin_bottom = -10.1464
custom_fonts/font = SubResource( 9 )
text = "Sapo"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerDetector" to="." method="_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="music_effect/Die" to="." method="_on_Die_finished"]
